<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/button_close"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/btn_padding"
        android:background="@drawable/btn_blue_bg_selector"
        android:src="@drawable/ic_check"
        android:text="@string/claim"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_close"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_team"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@color/engagers"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/team_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_engagers"
                android:textColor="@android:color/white"
                android:textSize="@dimen/large_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="center|center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_padding"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/windowBackground"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/congratulations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_padding"
                android:gravity="center"
                android:text="@string/congratulations"
                android:textColor="@color/windowBackground"
                android:textSize="@dimen/medium_text_size" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>