<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_stop_send"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/btn_padding"
        android:background="@drawable/btn_blue_bg_selector"
        android:onClick="submitData"
        android:text="@string/claim"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_stop_send"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_team"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@color/engagers"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/team_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_engagers"
                android:textColor="@android:color/white"
                android:textSize="@dimen/large_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_padding"
                android:gravity="center"
                android:text="@string/checkpoint_data_label"
                android:textColor="@color/windowBackground"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/number_records"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_padding"
                android:gravity="center"
                android:text="20"
                android:textColor="@color/windowBackground"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/latest_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_padding"
                android:gravity="center"
                android:text="@string/latest_data"
                android:textColor="@color/windowBackground"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_padding"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/btn_padding" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_temp" />

                    <TextView
                        android:id="@+id/temperature_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/btn_padding"
                        android:text="@string/celsius"
                        android:textColor="@color/windowBackground"
                        android:textSize="@dimen/large_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/btn_padding" >

                    <ImageView
                        android:id="@+id/ImageView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_humidity" />

                    <TextView
                        android:id="@+id/humidity_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/btn_padding"
                        android:text="@string/humidity"
                        android:textColor="@color/windowBackground"
                        android:textSize="@dimen/large_text_size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>