<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_team"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/team_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_engagers"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_detect"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_padding"
            android:background="@drawable/btn_bg_selector"
            android:drawableLeft="@drawable/ic_search"
            android:text="@string/scan"
            android:textColor="@color/windowBackground" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button_checkin"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/btn_padding"
                android:background="@drawable/btn_bg_selector"
                android:text="@string/button_checkin"
                android:textColor="@color/windowBackground" />

            <ListView
                android:id="@+id/list_checkpoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button_checkin"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/btn_padding"
                android:layout_marginTop="@dimen/btn_padding" >
            </ListView>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>